Fixed watch page flicker bug. There are still flicker bugs with all of the blur animations

--- a/src/styles/desktop/components/navbar.scss
+++ b/src/styles/desktop/components/navbar.scss
@@ -118,7 +118,6 @@ $UNDERLINE_CIRCLE_TRANSLATE_X: $UNDERLINE_WIDTH/2;
     border-bottom: 2px solid;
     border-color: rgba(255, 255, 255, 0);
     padding-bottom: $BOTTOM_MARGIN*0.05;
-    transition: .5s;
 
     .underline-animation {
       margin-top: 4px;
